metadata/force-app/main/default/objects/CustomName_dZkVL__c/CustomName_dZkVL__c.object-meta.xml
<CustomObject>
    <description>Description_CBIBn</description>
    <label>CustomLabel_WWYBm</label>
    <nameField>
        <label>CustomLabel_WWYBm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WWYBms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>