metadata/force-app/main/default/objects/CustomName_dZkVL__c/fields/CustomField_aEIeI__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aEIeI__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgHeqZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>