metadata/force-app/main/default/objects/CustomName_dZkVL__c/fields/CustomField_QxhLn__c.field-meta.xml
<CustomField>
    <fullName>CustomField_QxhLn__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJDgUn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>